tests/fixtures/invalid/missing-partition-key.bprint
{
  "schemaVersion": 1.0,
  "namespace": "acme.orders",
  "description": "Order missing partition key",
  "entity": {
    "primaryKey": {},
    "fields": [
      { "name": "orderId", "type": "string", "required": true }
    ]
  }
}
